--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "jquery": "^3.6.3",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.5.0",
