--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
@@ -21,6 +22,8 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "firebase": "^9.17.1",
+    "g": "^2.0.1",
     "jquery": "^3.6.3",
     "ng-circle-progress": "^1.6.0",
     "rxjs": "~7.5.0",
